test(propertiessieve): Centralize temp dir setting